# kinto-attachment

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  script.js  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
demo/: README.rst  index.html  script.js
kinto_attachment/: __init__.py  listeners.py  utils.py  views.py
kinto_attachment/tests/: __init__.py  test_events.py  test_plugin_setup.py  test_utils.py  test_views_attachment.py  test_views_bundle_attachments.py
kinto_attachment/tests/config/: events.ini  functional.ini  local.ini  s3.ini  s3_per_resource.ini  seafile.ini
kinto_attachment/views/: __init__.py  services.py  utils.py
scripts/: create_account.py  delete.py  download.py  requirements.txt  upgrade.py  upload.py
src/kinto_attachment/: __init__.py  listeners.py  migrations.py  utils.py  views.py
src/kinto_attachment/storage/: __init__.py  gcloud.py  local.py
tests/: __init__.py  test_events.py  test_plugin_setup.py  test_utils.py  test_views_attachment.py
tests/config/: events.ini  functional.ini  gcloud.ini  gcloud_per_resource.ini  local.ini  local_gzipped.ini  s3.ini  s3_per_resource.ini
tests/storage/: __init__.py  test_gcloud.py  test_local.py  test_utils.py
